# hike_logger

./: .gitignore  app.py  pyproject.toml
hike_logger/: __init__.py  models.py  routes.py
hike_logger/static/css/: style.css
hike_logger/templates/: add_gear.html  add_trip.html  base.html  edit_trip.html  gear_list.html  gear_performance.html  index.html  review_gear.html  trip_detail.html
