[tool.poetry]
name = "hike-logger"
version = "0.1.0"
description = "A flask app to log hikes and gear choices"
authors = ["Dallin Craven <dallincraven@gmail.com>"]
readme = "README.md"



[tool.poetry.dependencies]
flask = ">=3.1.1,<4.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
flask-wtf = ">=1.2.2,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"